# FoundationModelsEPFL

./: .gitignore  README.md
Assignment1/: CS461_assignment_2257317.err  CS461_assignment_2257317.out  assignment_1.ipynb  assignment_1.py  eval.py  final_accuracy_val_ood_results.txt  models.py  pyproject.toml  report.md  training_metrics.json  utils.py
